--- a/SQFParser/.classpath
+++ b/SQFParser/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="/home/robert/Documents/Programming/Libraries/AbegoSWT.jar"/>
-	<classpathentry kind="lib" path="/home/robert/Documents/Programming/Libraries/swt.jar"/>
 	<classpathentry kind="lib" path="/home/robert/Documents/Programming/Abego/org.abego.treelayout.core-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/Data/home/robert/Documents/Programming/Libraries/swt-4.7.3-gtk-linux-x86_64/swt_4.7.3_x86_64.jar" sourcepath="/Data/home/robert/Documents/Programming/Libraries/swt-4.7.3-gtk-linux-x86_64/src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
