--- a/AbgegoSWT/.classpath
+++ b/AbgegoSWT/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/robert/Documents/Programming/Abego/org.abego.treelayout.core-1.0.3.jar" sourcepath="/data/home/robert/Documents/Programming/Abego/org.abego.treelayout.core-1.0.3-sources.jar">
+	<classpathentry kind="lib" path="/home/robert/Documents/Programming/Abego/org.abego.treelayout.core-1.0.3.jar" sourcepath="/home/robert/.sourceattacher/org.abego.treelayout.core-1.0.3-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/home/robert/Documents/Programming/Abego/org.abego.treelayout.core-1.0.3-javadoc.jar!/"/>
 		</attributes>
